upgrade A2 and A3 tasks to 2019 version (solutions are not updated yet)

--- a/assignment2/BatchNormalization.ipynb
+++ b/assignment2/BatchNormalization.ipynb
@@ -6,19 +6,23 @@
    "source": [
     "# Batch Normalization\n", 
     "One way to make deep networks easier to train is to use more sophisticated optimization procedures such as SGD+momentum, RMSProp, or Adam. Another strategy is to change the architecture of the network to make it easier to train. \n", 
-    "One idea along these lines is batch normalization which was proposed by [3] in 2015.\n", 
+    "One idea along these lines is batch normalization which was proposed by [1] in 2015.\n", 
     "\n", 
     "The idea is relatively straightforward. Machine learning methods tend to work better when their input data consists of uncorrelated features with zero mean and unit variance. When training a neural network, we can preprocess the data before feeding it to the network to explicitly decorrelate its features; this will ensure that the first layer of the network sees data that follows a nice distribution. However, even if we preprocess the input data, the activations at deeper layers of the network will likely no longer be decorrelated and will no longer have zero mean or unit variance since they are output from earlier layers in the network. Even worse, during the training process the distribution of features at each layer of the network will shift as the weights of each layer are updated.\n", 
     "\n", 
-    "The authors of [3] hypothesize that the shifting distribution of features inside deep neural networks may make training deep networks more difficult. To overcome this problem, [3] proposes to insert batch normalization layers into the network. At training time, a batch normalization layer uses a minibatch of data to estimate the mean and standard deviation of each feature. These estimated means and standard deviations are then used to center and normalize the features of the minibatch. A running average of these means and standard deviations is kept during training, and at test time these running averages are used to center and normalize features.\n", 
+    "The authors of [1] hypothesize that the shifting distribution of features inside deep neural networks may make training deep networks more difficult. To overcome this problem, [1] proposes to insert batch normalization layers into the network. At training time, a batch normalization layer uses a minibatch of data to estimate the mean and standard deviation of each feature. These estimated means and standard deviations are then used to center and normalize the features of the minibatch. A running average of these means and standard deviations is kept during training, and at test time these running averages are used to center and normalize features.\n", 
     "\n", 
     "It is possible that this normalization strategy could reduce the representational power of the network, since it may sometimes be optimal for certain layers to have features that are not zero-mean or unit variance. To this end, the batch normalization layer includes learnable shift and scale parameters for each feature dimension.\n", 
     "\n", 
-    "[3] [Sergey Ioffe and Christian Szegedy, \"Batch Normalization: Accelerating Deep Network Training by Reducing\n", 
+    "[1] [Sergey Ioffe and Christian Szegedy, \"Batch Normalization: Accelerating Deep Network Training by Reducing\n", 
     "Internal Covariate Shift\", ICML 2015.](https://arxiv.org/abs/1502.03167)"
    ], 
    "cell_type": "markdown", 
-   "metadata": {}
+   "metadata": {
+    "tags": [
+     "pdf-title"
+    ]
+   }
   }, 
   {
    "execution_count": null, 
@@ -54,7 +58,9 @@
    ], 
    "outputs": [], 
    "metadata": {
-    "collapsed": true
+    "tags": [
+     "pdf-ignore"
+    ]
    }
   }, 
   {
@@ -68,7 +74,9 @@
    ], 
    "outputs": [], 
    "metadata": {
-    "collapsed": true
+    "tags": [
+     "pdf-ignore"
+    ]
    }
   }, 
   {
@@ -76,7 +84,7 @@
     "## Batch normalization: forward\n", 
     "In the file `cs231n/layers.py`, implement the batch normalization forward pass in the function `batchnorm_forward`. Once you have done so, run the following to test your implementation.\n", 
     "\n", 
-    "Referencing the paper linked to above would be helpful!"
+    "Referencing the paper linked to above in [1] may be helpful!"
    ], 
    "cell_type": "markdown", 
    "metadata": {}
@@ -114,9 +122,7 @@
     "print_mean_std(a_norm,axis=0)"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "execution_count": null, 
@@ -152,9 +158,7 @@
     "print_mean_std(a_norm,axis=0)"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -197,29 +201,58 @@
     "print('dbeta error: ', rel_error(db_num, dbeta))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
     "## Batch normalization: alternative backward\n", 
     "In class we talked about two different implementations for the sigmoid backward pass. One strategy is to write out a computation graph composed of simple operations and backprop through all intermediate values. Another strategy is to work out the derivatives on paper. For example, you can derive a very simple formula for the sigmoid function's backward pass by simplifying gradients on paper.\n", 
     "\n", 
-    "Surprisingly, it turns out that you can do a similar simplification for the batch normalization backward pass too.  \n", 
-    "Given a set of inputs $X=\\begin{bmatrix}x_1\\\\x_2\\\\...\\\\x_N\\end{bmatrix}$, \n", 
-    "we first calculate the mean $\\mu=\\frac{1}{N}\\sum_{k=1}^N x_k$ and variance $v=\\frac{1}{N}\\sum_{k=1}^N (x_k-\\mu)^2.$    \n", 
-    "With $\\mu$ and $v$ calculated, we can calculate the standard deviation $\\sigma=\\sqrt{v+\\epsilon}$  and normalized data $Y$ with $y_i=\\frac{x_i-\\mu}{\\sigma}.$\n", 
+    "Surprisingly, it turns out that you can do a similar simplification for the batch normalization backward pass too!  \n", 
     "\n", 
+    "In the forward pass, given a set of inputs $X=\\begin{bmatrix}x_1\\\\x_2\\\\...\\\\x_N\\end{bmatrix}$, \n", 
     "\n", 
-    "The meat of our problem is to get $\\frac{\\partial L}{\\partial X}$ from the upstream gradient $\\frac{\\partial L}{\\partial Y}.$ It might be challenging to directly reason about the gradients over $X$ and $Y$ - try reasoning about it in terms of $x_i$ and $y_i$ first.\n", 
+    "we first calculate the mean $\\mu$ and variance $v$.\n", 
+    "With $\\mu$ and $v$ calculated, we can calculate the standard deviation $\\sigma$  and normalized data $Y$.\n", 
+    "The equations and graph illustration below describe the computation ($y_i$ is the i-th element of the vector $Y$).\n", 
     "\n", 
-    "You will need to come up with the derivations for $\\frac{\\partial L}{\\partial x_i}$, by relying on the Chain Rule to first calculate the intermediate $\\frac{\\partial \\mu}{\\partial x_i}, \\frac{\\partial v}{\\partial x_i}, \\frac{\\partial \\sigma}{\\partial x_i},$ then assemble these pieces to calculate $\\frac{\\partial y_i}{\\partial x_i}$. You should make sure each of the intermediary steps are all as simple as possible. \n", 
+    "\\begin{align}\n", 
+    "& \\mu=\\frac{1}{N}\\sum_{k=1}^N x_k  &  v=\\frac{1}{N}\\sum_{k=1}^N (x_k-\\mu)^2 \\\\\n", 
+    "& \\sigma=\\sqrt{v+\\epsilon}         &  y_i=\\frac{x_i-\\mu}{\\sigma}\n", 
+    "\\end{align}"
+   ], 
+   "cell_type": "markdown", 
+   "metadata": {}
+  }, 
+  {
+   "source": [
+    "<img src=\"notebook_images/batchnorm_graph.png\" width=691 height=202>"
+   ], 
+   "cell_type": "markdown", 
+   "metadata": {}
+  }, 
+  {
+   "source": [
+    "The meat of our problem during backpropagation is to compute $\\frac{\\partial L}{\\partial X}$, given the upstream gradient we receive, $\\frac{\\partial L}{\\partial Y}.$ To do this, recall the chain rule in calculus gives us $\\frac{\\partial L}{\\partial X} = \\frac{\\partial L}{\\partial Y} \\cdot \\frac{\\partial Y}{\\partial X}$.\n", 
+    "\n", 
+    "The unknown/hart part is $\\frac{\\partial Y}{\\partial X}$. We can find this by first deriving step-by-step our local gradients at \n", 
+    "$\\frac{\\partial v}{\\partial X}$, $\\frac{\\partial \\mu}{\\partial X}$,\n", 
+    "$\\frac{\\partial \\sigma}{\\partial v}$, \n", 
+    "$\\frac{\\partial Y}{\\partial \\sigma}$, and $\\frac{\\partial Y}{\\partial \\mu}$,\n", 
+    "and then use the chain rule to compose these gradients (which appear in the form of vectors!) appropriately to compute $\\frac{\\partial Y}{\\partial X}$.\n", 
+    "\n", 
+    "If it's challenging to directly reason about the gradients over $X$ and $Y$ which require matrix multiplication, try reasoning about the gradients in terms of individual elements $x_i$ and $y_i$ first: in that case, you will need to come up with the derivations for $\\frac{\\partial L}{\\partial x_i}$, by relying on the Chain Rule to first calculate the intermediate $\\frac{\\partial \\mu}{\\partial x_i}, \\frac{\\partial v}{\\partial x_i}, \\frac{\\partial \\sigma}{\\partial x_i},$ then assemble these pieces to calculate $\\frac{\\partial y_i}{\\partial x_i}$. \n", 
+    "\n", 
+    "You should make sure each of the intermediary gradient derivations are all as simplified as possible, for ease of implementation. \n", 
     "\n", 
     "After doing so, implement the simplified batch normalization backward pass in the function `batchnorm_backward_alt` and compare the two implementations by running the following. Your two implementations should compute nearly identical results, but the alternative implementation should be a bit faster."
    ], 
    "cell_type": "markdown", 
-   "metadata": {}
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   }
   }, 
   {
    "execution_count": null, 
@@ -247,9 +280,7 @@
     "print('speedup: %.2fx' % ((t2 - t1) / (t3 - t2)))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -291,9 +322,7 @@
     "  if reg == 0: print()"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -323,6 +352,7 @@
     "bn_model = FullyConnectedNet(hidden_dims, weight_scale=weight_scale, normalization='batchnorm')\n", 
     "model = FullyConnectedNet(hidden_dims, weight_scale=weight_scale, normalization=None)\n", 
     "\n", 
+    "print('Solver with batch norm:')\n", 
     "bn_solver = Solver(bn_model, small_data,\n", 
     "                num_epochs=10, batch_size=50,\n", 
     "                update_rule='adam',\n", 
@@ -332,6 +362,7 @@
     "                verbose=True,print_every=20)\n", 
     "bn_solver.train()\n", 
     "\n", 
+    "print('\\nSolver without batch norm:')\n", 
     "solver = Solver(model, small_data,\n", 
     "                num_epochs=10, batch_size=50,\n", 
     "                update_rule='adam',\n", 
@@ -342,9 +373,7 @@
     "solver.train()"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -391,7 +420,9 @@
    ], 
    "outputs": [], 
    "metadata": {
-    "collapsed": true
+    "tags": [
+     "pdf-ignore-input"
+    ]
    }
   }, 
   {
@@ -449,7 +480,9 @@
    ], 
    "outputs": [], 
    "metadata": {
-    "collapsed": true
+    "tags": [
+     "pdf-ignore-input"
+    ]
    }
   }, 
   {
@@ -501,23 +534,25 @@
    ], 
    "outputs": [], 
    "metadata": {
-    "collapsed": true
+    "tags": [
+     "pdf-ignore-input"
+    ]
    }
   }, 
   {
    "source": [
     "## Inline Question 1:\n", 
-    "Describe the results of this experiment. How does the scale of weight initialization affect models with/without batch normalization differently, and why?"
+    "Describe the results of this experiment. How does the scale of weight initialization affect models with/without batch normalization differently, and why?\n", 
+    "\n", 
+    "## Answer:\n", 
+    "[FILL THIS IN]\n"
    ], 
    "cell_type": "markdown", 
-   "metadata": {}
-  }, 
-  {
-   "source": [
-    "## Answer:\n"
-   ], 
-   "cell_type": "markdown", 
-   "metadata": {}
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   }
   }, 
   {
    "source": [
@@ -583,7 +618,9 @@
    ], 
    "outputs": [], 
    "metadata": {
-    "collapsed": true
+    "tags": [
+     "pdf-ignore-input"
+    ]
    }
   }, 
   {
@@ -601,28 +638,31 @@
     "plt.show()"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
     "## Inline Question 2:\n", 
     "Describe the results of this experiment. What does this imply about the relationship between batch normalization and batch size? Why is this relationship observed?\n", 
     "\n", 
-    "## Answer:\n"
+    "## Answer:\n", 
+    "[FILL THIS IN]\n"
    ], 
    "cell_type": "markdown", 
-   "metadata": {}
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   }
   }, 
   {
    "source": [
     "# Layer Normalization\n", 
     "Batch normalization has proved to be effective in making networks easier to train, but the dependency on batch size makes it less useful in complex networks which have a cap on the input batch size due to hardware limitations. \n", 
     "\n", 
-    "Several alternatives to batch normalization have been proposed to mitigate this problem; one such technique is Layer Normalization [4]. Instead of normalizing over the batch, we normalize over the features. In other words, when using Layer Normalization, each feature vector corresponding to a single datapoint is normalized based on the sum of all terms within that feature vector.\n", 
+    "Several alternatives to batch normalization have been proposed to mitigate this problem; one such technique is Layer Normalization [2]. Instead of normalizing over the batch, we normalize over the features. In other words, when using Layer Normalization, each feature vector corresponding to a single datapoint is normalized based on the sum of all terms within that feature vector.\n", 
     "\n", 
-    "[4] [Ba, Jimmy Lei, Jamie Ryan Kiros, and Geoffrey E. Hinton. \"Layer Normalization.\" stat 1050 (2016): 21.](https://arxiv.org/pdf/1607.06450.pdf)"
+    "[2] [Ba, Jimmy Lei, Jamie Ryan Kiros, and Geoffrey E. Hinton. \"Layer Normalization.\" stat 1050 (2016): 21.](https://arxiv.org/pdf/1607.06450.pdf)"
    ], 
    "cell_type": "markdown", 
    "metadata": {}
@@ -637,10 +677,15 @@
     "3. Subtracting the mean image of the dataset from each image in the dataset.\n", 
     "4. Setting all RGB values to either 0 or 1 depending on a given threshold.\n", 
     "\n", 
-    "## Answer:\n"
+    "## Answer:\n", 
+    "[FILL THIS IN]\n"
    ], 
    "cell_type": "markdown", 
-   "metadata": {}
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   }
   }, 
   {
    "source": [
@@ -696,9 +741,7 @@
     "print_mean_std(a_norm,axis=1)"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "execution_count": null, 
@@ -730,9 +773,7 @@
     "print('dbeta error: ', rel_error(db_num, dbeta))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -760,9 +801,7 @@
     "plt.show()"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -775,10 +814,14 @@
     "\n", 
     "\n", 
     "## Answer:\n", 
-    "\n"
+    "[FILL THIS IN]\n"
    ], 
    "cell_type": "markdown", 
-   "metadata": {}
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   }
   }
  ], 
  "metadata": {
@@ -792,7 +835,7 @@
    "nbconvert_exporter": "python", 
    "name": "python", 
    "file_extension": ".py", 
-   "version": "3.5.1", 
+   "version": "3.7.1", 
    "pygments_lexer": "ipython3", 
    "codemirror_mode": {
     "version": 3, 
