--- a/assignment2/Dropout.ipynb
+++ b/assignment2/Dropout.ipynb
@@ -5,12 +5,16 @@
   {
    "source": [
     "# Dropout\n", 
-    "Dropout [1] is a technique for regularizing neural networks by randomly setting some features to zero during the forward pass. In this exercise you will implement a dropout layer and modify your fully-connected network to optionally use dropout.\n", 
+    "Dropout [1] is a technique for regularizing neural networks by randomly setting some output activations to zero during the forward pass. In this exercise you will implement a dropout layer and modify your fully-connected network to optionally use dropout.\n", 
     "\n", 
     "[1] [Geoffrey E. Hinton et al, \"Improving neural networks by preventing co-adaptation of feature detectors\", arXiv 2012](https://arxiv.org/abs/1207.0580)"
    ], 
    "cell_type": "markdown", 
-   "metadata": {}
+   "metadata": {
+    "tags": [
+     "pdf-title"
+    ]
+   }
   }, 
   {
    "execution_count": null, 
@@ -42,7 +46,9 @@
    ], 
    "outputs": [], 
    "metadata": {
-    "collapsed": true
+    "tags": [
+     "pdf-ignore"
+    ]
    }
   }, 
   {
@@ -57,7 +63,9 @@
    ], 
    "outputs": [], 
    "metadata": {
-    "collapsed": true
+    "tags": [
+     "pdf-ignore"
+    ]
    }
   }, 
   {
@@ -90,9 +98,7 @@
     "  print()"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -119,29 +125,27 @@
     "print('dx relative error: ', rel_error(dx, dx_num))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
     "## Inline Question 1:\n", 
-    "What happens if we do not divide the values being passed through inverse dropout by `p` in the dropout layer? Why does that happen?"
+    "What happens if we do not divide the values being passed through inverse dropout by `p` in the dropout layer? Why does that happen?\n", 
+    "\n", 
+    "## Answer:\n", 
+    "[FILL THIS IN]\n"
    ], 
    "cell_type": "markdown", 
-   "metadata": {}
-  }, 
-  {
-   "source": [
-    "## Answer:\n"
-   ], 
-   "cell_type": "markdown", 
-   "metadata": {}
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   }
   }, 
   {
    "source": [
     "# Fully-connected nets with Dropout\n", 
-    "In the file `cs231n/classifiers/fc_net.py`, modify your implementation to use dropout. Specifically, if the constructor of the net receives a value that is not 1 for the `dropout` parameter, then the net should add dropout immediately after every ReLU nonlinearity. After doing so, run the following to numerically gradient-check your implementation."
+    "In the file `cs231n/classifiers/fc_net.py`, modify your implementation to use dropout. Specifically, if the constructor of the network receives a value that is not 1 for the `dropout` parameter, then the net should add a dropout layer immediately after every ReLU nonlinearity. After doing so, run the following to numerically gradient-check your implementation."
    ], 
    "cell_type": "markdown", 
    "metadata": {}
@@ -173,9 +177,7 @@
     "  print()"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -213,12 +215,12 @@
     "                  },\n", 
     "                  verbose=True, print_every=100)\n", 
     "  solver.train()\n", 
-    "  solvers[dropout] = solver"
+    "  solvers[dropout] = solver\n", 
+    "  print()"
    ], 
    "outputs": [], 
    "metadata": {
-    "scrolled": false, 
-    "collapsed": true
+    "scrolled": false
    }
   }, 
   {
@@ -254,47 +256,36 @@
     "plt.show()"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
     "## Inline Question 2:\n", 
-    "Compare the validation and training accuracies with and without dropout -- what do your results suggest about dropout as a regularizer?"
+    "Compare the validation and training accuracies with and without dropout -- what do your results suggest about dropout as a regularizer?\n", 
+    "\n", 
+    "## Answer:\n", 
+    "[FILL THIS IN]\n"
    ], 
    "cell_type": "markdown", 
-   "metadata": {}
-  }, 
-  {
-   "source": [
-    "## Answer:\n"
-   ], 
-   "cell_type": "markdown", 
-   "metadata": {}
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   }
   }, 
   {
    "source": [
     "## Inline Question 3:\n", 
-    "Suppose we are training a deep fully-connected network for image classification, with dropout after hidden layers (parameterized by keep probability p). How should we modify p, if at all, if we decide to decrease the size of the hidden layers (that is, the number of nodes in each layer)?"
+    "Suppose we are training a deep fully-connected network for image classification, with dropout after hidden layers (parameterized by keep probability p). If we are concerned about overfitting, how should we modify p (if at all) when we decide to decrease the size of the hidden layers (that is, the number of nodes in each layer)?\n", 
+    "\n", 
+    "## Answer:\n", 
+    "[FILL THIS IN]\n"
    ], 
    "cell_type": "markdown", 
-   "metadata": {}
-  }, 
-  {
-   "source": [
-    "## Answer:\n"
-   ], 
-   "cell_type": "markdown", 
-   "metadata": {}
-  }, 
-  {
-   "execution_count": null, 
-   "cell_type": "code", 
-   "source": [], 
-   "outputs": [], 
    "metadata": {
-    "collapsed": true
+    "tags": [
+     "pdf-inline"
+    ]
    }
   }
  ], 
@@ -309,7 +300,7 @@
    "nbconvert_exporter": "python", 
    "name": "python", 
    "file_extension": ".py", 
-   "version": "3.5.1", 
+   "version": "3.7.1", 
    "pygments_lexer": "ipython3", 
    "codemirror_mode": {
     "version": 3, 
