--- a/assignment2/FullyConnectedNets.ipynb
+++ b/assignment2/FullyConnectedNets.ipynb
@@ -5,8 +5,17 @@
   {
    "source": [
     "# Fully-Connected Neural Nets\n", 
-    "In the previous homework you implemented a fully-connected two-layer neural network on CIFAR-10. The implementation was simple but not very modular since the loss and gradient were computed in a single monolithic function. This is manageable for a simple two-layer network, but would become impractical as we move to bigger models. Ideally we want to build networks using a more modular design so that we can implement different layer types in isolation and then snap them together into models with different architectures.\n", 
-    "\n", 
+    "In the previous homework you implemented a fully-connected two-layer neural network on CIFAR-10. The implementation was simple but not very modular since the loss and gradient were computed in a single monolithic function. This is manageable for a simple two-layer network, but would become impractical as we move to bigger models. Ideally we want to build networks using a more modular design so that we can implement different layer types in isolation and then snap them together into models with different architectures."
+   ], 
+   "cell_type": "markdown", 
+   "metadata": {
+    "tags": [
+     "pdf-title"
+    ]
+   }
+  }, 
+  {
+   "source": [
     "In this exercise we will implement fully-connected networks using a more modular approach. For each layer we will implement a `forward` and a `backward` function. The `forward` function will receive inputs, weights, and other parameters and will return both an output and a `cache` object storing data needed for the backward pass, like this:\n", 
     "\n", 
     "```python\n", 
@@ -46,7 +55,11 @@
     "  "
    ], 
    "cell_type": "markdown", 
-   "metadata": {}
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   }
   }, 
   {
    "execution_count": null, 
@@ -78,7 +91,9 @@
    ], 
    "outputs": [], 
    "metadata": {
-    "collapsed": true
+    "tags": [
+     "pdf-ignore"
+    ]
    }
   }, 
   {
@@ -93,7 +108,9 @@
    ], 
    "outputs": [], 
    "metadata": {
-    "collapsed": true
+    "tags": [
+     "pdf-ignore"
+    ]
    }
   }, 
   {
@@ -132,9 +149,7 @@
     "print('difference: ', rel_error(out, correct_out))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -169,9 +184,7 @@
     "print('db error: ', rel_error(db_num, db))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -199,9 +212,7 @@
     "print('difference: ', rel_error(out, correct_out))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -229,9 +240,7 @@
     "print('dx error: ', rel_error(dx_num, dx))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -240,18 +249,17 @@
     "We've only asked you to implement ReLU, but there are a number of different activation functions that one could use in neural networks, each with its pros and cons. In particular, an issue commonly seen with activation functions is getting zero (or close to zero) gradient flow during backpropagation. Which of the following activation functions have this problem? If you consider these functions in the one dimensional case, what types of input would lead to this behaviour?\n", 
     "1. Sigmoid\n", 
     "2. ReLU\n", 
-    "3. Leaky ReLU"
-   ], 
-   "cell_type": "markdown", 
-   "metadata": {}
-  }, 
-  {
-   "source": [
+    "3. Leaky ReLU\n", 
+    "\n", 
     "## Answer:\n", 
     "[FILL THIS IN]\n"
    ], 
    "cell_type": "markdown", 
-   "metadata": {}
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   }
   }, 
   {
    "source": [
@@ -288,9 +296,7 @@
     "print('db error: ', rel_error(db_num, db))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -328,9 +334,7 @@
     "print('dx error: ', rel_error(dx_num, dx))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -401,9 +405,7 @@
     "    print('%s relative error: %.2e' % (name, rel_error(grad_num, grads[name])))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -426,15 +428,15 @@
     "# TODO: Use a Solver instance to train a TwoLayerNet that achieves at least  #\n", 
     "# 50% accuracy on the validation set.                                        #\n", 
     "##############################################################################\n", 
+    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n", 
     "pass\n", 
+    "\n# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n", 
     "##############################################################################\n", 
     "#                             END OF YOUR CODE                               #\n", 
     "##############################################################################"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "execution_count": null, 
@@ -458,9 +460,7 @@
     "plt.show()"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -476,13 +476,8 @@
   }, 
   {
    "source": [
-    "## Initial loss and gradient check"
-   ], 
-   "cell_type": "markdown", 
-   "metadata": {}
-  }, 
-  {
-   "source": [
+    "## Initial loss and gradient check\n", 
+    "\n", 
     "As a sanity check, run the following to check the initial loss and to gradient check the network both with and without regularization. Do the initial losses seem reasonable?\n", 
     "\n", 
     "For gradient checking, you should expect to see errors around 1e-7 or less."
@@ -516,13 +511,11 @@
     "    print('%s relative error: %.2e' % (name, rel_error(grad_num, grads[name])))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
-    "As another sanity check, make sure you can overfit a small dataset of 50 images. First we will try a three-layer network with 100 units in each hidden layer. In the following cell, tweak the learning rate and initialization scale to overfit and achieve 100% training accuracy within 20 epochs."
+    "As another sanity check, make sure you can overfit a small dataset of 50 images. First we will try a three-layer network with 100 units in each hidden layer. In the following cell, tweak the **learning rate** and **weight initialization scale** to overfit and achieve 100% training accuracy within 20 epochs."
    ], 
    "cell_type": "markdown", 
    "metadata": {}
@@ -542,8 +535,8 @@
     "  'y_val': data['y_val'],\n", 
     "}\n", 
     "\n", 
-    "weight_scale = 1e-2\n", 
-    "learning_rate = 1e-4\n", 
+    "weight_scale = 1e-2   # Experiment with this!\n", 
+    "learning_rate = 1e-4  # Experiment with this!\n", 
     "model = FullyConnectedNet([100, 100],\n", 
     "              weight_scale=weight_scale, dtype=np.float64)\n", 
     "solver = Solver(model, small_data,\n", 
@@ -563,13 +556,12 @@
    ], 
    "outputs": [], 
    "metadata": {
-    "scrolled": false, 
-    "collapsed": true
+    "scrolled": false
    }
   }, 
   {
    "source": [
-    "Now try to use a five-layer network with 100 units on each layer to overfit 50 training examples. Again you will have to adjust the learning rate and weight initialization, but you should be able to achieve 100% training accuracy within 20 epochs."
+    "Now try to use a five-layer network with 100 units on each layer to overfit 50 training examples. Again, you will have to adjust the learning rate and weight initialization scale, but you should be able to achieve 100% training accuracy within 20 epochs."
    ], 
    "cell_type": "markdown", 
    "metadata": {}
@@ -589,8 +581,8 @@
     "  'y_val': data['y_val'],\n", 
     "}\n", 
     "\n", 
-    "learning_rate = 2e-3\n", 
-    "weight_scale = 1e-5\n", 
+    "learning_rate = 2e-3  # Experiment with this!\n", 
+    "weight_scale = 1e-5   # Experiment with this!\n", 
     "model = FullyConnectedNet([100, 100, 100, 100],\n", 
     "                weight_scale=weight_scale, dtype=np.float64)\n", 
     "solver = Solver(model, small_data,\n", 
@@ -609,25 +601,22 @@
     "plt.show()"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
     "## Inline Question 2: \n", 
-    "Did you notice anything about the comparative difficulty of training the three-layer net vs training the five layer net? In particular, based on your experience, which network seemed more sensitive to the initialization scale? Why do you think that is the case?"
-   ], 
-   "cell_type": "markdown", 
-   "metadata": {}
-  }, 
-  {
-   "source": [
+    "Did you notice anything about the comparative difficulty of training the three-layer net vs training the five layer net? In particular, based on your experience, which network seemed more sensitive to the initialization scale? Why do you think that is the case?\n", 
+    "\n", 
     "## Answer:\n", 
     "[FILL THIS IN]\n"
    ], 
    "cell_type": "markdown", 
-   "metadata": {}
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   }
   }, 
   {
    "source": [
@@ -677,9 +666,7 @@
     "print('velocity error: ', rel_error(expected_velocity, config['velocity']))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -710,7 +697,7 @@
     "                  num_epochs=5, batch_size=100,\n", 
     "                  update_rule=update_rule,\n", 
     "                  optim_config={\n", 
-    "                    'learning_rate': 1e-2,\n", 
+    "                    'learning_rate': 5e-3,\n", 
     "                  },\n", 
     "                  verbose=True)\n", 
     "  solvers[update_rule] = solver\n", 
@@ -729,15 +716,15 @@
     "plt.title('Validation accuracy')\n", 
     "plt.xlabel('Epoch')\n", 
     "\n", 
-    "for update_rule, solver in list(solvers.items()):\n", 
+    "for update_rule, solver in solvers.items():\n", 
     "  plt.subplot(3, 1, 1)\n", 
-    "  plt.plot(solver.loss_history, 'o', label=update_rule)\n", 
+    "  plt.plot(solver.loss_history, 'o', label=\"loss_%s\" % update_rule)\n", 
     "  \n", 
     "  plt.subplot(3, 1, 2)\n", 
-    "  plt.plot(solver.train_acc_history, '-o', label=update_rule)\n", 
+    "  plt.plot(solver.train_acc_history, '-o', label=\"train_acc_%s\" % update_rule)\n", 
     "\n", 
     "  plt.subplot(3, 1, 3)\n", 
-    "  plt.plot(solver.val_acc_history, '-o', label=update_rule)\n", 
+    "  plt.plot(solver.val_acc_history, '-o', label=\"val_acc_%s\" % update_rule)\n", 
     "  \n", 
     "for i in [1, 2, 3]:\n", 
     "  plt.subplot(3, 1, i)\n", 
@@ -747,8 +734,7 @@
    ], 
    "outputs": [], 
    "metadata": {
-    "scrolled": false, 
-    "collapsed": true
+    "scrolled": false
    }
   }, 
   {
@@ -798,9 +784,7 @@
     "print('cache error: ', rel_error(expected_cache, config['cache']))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "execution_count": null, 
@@ -840,9 +824,7 @@
     "print('m error: ', rel_error(expected_m, config['m']))"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -900,9 +882,7 @@
     "plt.show()"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }, 
   {
    "source": [
@@ -915,17 +895,18 @@
     "w += - learning_rate * dw / (np.sqrt(cache) + eps)\n", 
     "```\n", 
     "\n", 
-    "John notices that when he was training a network with AdaGrad that the updates became very small, and that his network was learning slowly. Using your knowledge of the AdaGrad update rule, why do you think the updates would become very small? Would Adam have the same issue?\n"
+    "John notices that when he was training a network with AdaGrad that the updates became very small, and that his network was learning slowly. Using your knowledge of the AdaGrad update rule, why do you think the updates would become very small? Would Adam have the same issue?\n", 
+    "\n", 
+    "\n", 
+    "## Answer: \n", 
+    "[FILL THIS IN]\n"
    ], 
    "cell_type": "markdown", 
-   "metadata": {}
-  }, 
-  {
-   "source": [
-    "## Answer: \n"
-   ], 
-   "cell_type": "markdown", 
-   "metadata": {}
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   }
   }, 
   {
    "source": [
@@ -949,15 +930,16 @@
     "# find batch/layer normalization and dropout useful. Store your best model in  #\n", 
     "# the best_model variable.                                                     #\n", 
     "################################################################################\n", 
+    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n", 
     "pass\n", 
+    "\n# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n", 
     "################################################################################\n", 
     "#                              END OF YOUR CODE                                #\n", 
     "################################################################################"
    ], 
    "outputs": [], 
    "metadata": {
-    "scrolled": false, 
-    "collapsed": true
+    "scrolled": false
    }
   }, 
   {
@@ -978,9 +960,7 @@
     "print('Test set accuracy: ', (y_test_pred == data['y_test']).mean())"
    ], 
    "outputs": [], 
-   "metadata": {
-    "collapsed": true
-   }
+   "metadata": {}
   }
  ], 
  "metadata": {
@@ -994,7 +974,7 @@
    "nbconvert_exporter": "python", 
    "name": "python", 
    "file_extension": ".py", 
-   "version": "3.5.1", 
+   "version": "3.7.1", 
    "pygments_lexer": "ipython3", 
    "codemirror_mode": {
     "version": 3, 
