--- a/assignment3/LSTM_Captioning_solution_yorko.ipynb
+++ b/assignment3/LSTM_Captioning_solution_yorko.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. [A3, part 2](http://cs231n.github.io/assignments2018/assignment3/).  Image Captioning with LSTMs\n",
+    "# <center> cs231n 2019. [A3, part 2](http://cs231n.github.io/assignments2018/assignment3/).  Image Captioning with LSTMs\n",
     "<img src='../img/cs231n_logo.png' width=70%>\n",
     "    \n",
-    "#### <center> **Solution by @yorko**\n",
+    "#### <center> **Solution by [Yury Kashnitsky](https://www.kaggle.com/kashnitsky) (@yorko)**\n",
     "\n",
     "In the previous exercise you implemented a vanilla RNN and applied it to image captioning. In this notebook you will implement the LSTM update rule and use it for image captioning."
    ]
