--- a/assignment3/RNN_Captioning.ipynb
+++ b/assignment3/RNN_Captioning.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-title"
+    ]
+   },
    "source": [
     "# Image Captioning with RNNs\n",
     "In this exercise you will implement a vanilla recurrent neural networks and use them it to train a model that can generate novel captions for images."
@@ -11,7 +15,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# As usual, a bit of setup\n",
@@ -65,7 +73,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "source": [
     "# Microsoft COCO\n",
     "For this exercise we will use the 2014 release of the [Microsoft COCO dataset](http://mscoco.org/) which has become the standard testbed for image captioning. The dataset consists of 80,000 training images and 40,000 validation images, each annotated with 5 captions written by workers on Amazon Mechanical Turk.\n",
@@ -86,7 +98,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Load COCO data from disk; this returns a dictionary\n",
@@ -377,7 +393,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "source": [
     "# Temporal Affine layer\n",
     "At every timestep we use an affine function to transform the RNN hidden vector at that timestep into scores for each word in the vocabulary. Because this is very similar to the affine layer that you implemented in assignment 2, we have provided this function for you in the `temporal_affine_forward` and `temporal_affine_backward` functions in the file `cs231n/rnn_layers.py`. Run the following to perform numeric gradient checking on the implementation. You should see errors on the order of e-9 or less."
@@ -386,7 +406,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "np.random.seed(231)\n",
@@ -418,7 +442,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "source": [
     "# Temporal Softmax loss\n",
     "In an RNN language model, at every timestep we produce a score for each word in the vocabulary. We know the ground-truth word at each timestep, so we use a softmax loss function to compute loss and gradient at each timestep. We sum the losses over time and average them over the minibatch.\n",
@@ -433,7 +461,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Sanity check for temporal softmax loss\n",
@@ -446,7 +478,7 @@
     "    y = np.random.randint(V, size=(N, T))\n",
     "    mask = np.random.rand(N, T) <= p\n",
     "    print(temporal_softmax_loss(x, y, mask)[0])\n",
-    "  \n",
+    "\n",
     "check_loss(100, 1, 10, 1.0)   # Should be about 2.3\n",
     "check_loss(100, 10, 10, 1.0)  # Should be about 23\n",
     "check_loss(5000, 10, 10, 0.1) # Should be about 2.3\n",
@@ -637,20 +669,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   },
    "source": [
-    "# INLINE QUESTION 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# INLINE QUESTION 1\n",
+    "\n",
     "In our current image captioning setup, our RNN language model produces a word at every timestep as its output. However, an alternate way to pose the problem is to train the network to operate over _characters_ (e.g. 'a', 'b', etc.) as opposed to words, so that at it every timestep, it receives the previous character as input and tries to predict the next character in the sequence. For example, the network might generate a caption like\n",
     "\n",
     "'A', ' ', 'c', 'a', 't', ' ', 'o', 'n', ' ', 'a', ' ', 'b', 'e', 'd'\n",
     "\n",
-    "Can you describe one advantage of an image-captioning model that uses a character-level RNN? Can you also describe one disadvantage? HINT: there are several valid answers, but it might be useful to compare the parameter space of word-level and character-level models."
+    "Can you describe one advantage of an image-captioning model that uses a character-level RNN? Can you also describe one disadvantage? HINT: there are several valid answers, but it might be useful to compare the parameter space of word-level and character-level models.\n",
+    "\n",
+    "**Your Answer:** \n",
+    "\n"
    ]
   }
  ],
