--- a/assignment3/LSTM_Captioning.ipynb
+++ b/assignment3/LSTM_Captioning.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-title"
+    ]
+   },
    "source": [
     "# Image Captioning with LSTMs\n",
     "In the previous exercise you implemented a vanilla RNN and applied it to image captioning. In this notebook you will implement the LSTM update rule and use it for image captioning."
@@ -11,7 +15,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# As usual, a bit of setup\n",
@@ -52,7 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load COCO data from disk; this returns a dictionary\n",
@@ -117,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "N, D, H = 3, 4, 5\n",
@@ -154,7 +167,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.random.seed(231)\n",
@@ -218,7 +233,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "N, D, H, T = 2, 5, 4, 3\n",
@@ -252,7 +269,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from cs231n.rnn_layers import lstm_forward, lstm_backward\n",
@@ -293,16 +312,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   },
    "source": [
-    "# INLINE QUESTION"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Recall that in an LSTM the input gate $i$, forget gate $f$, and output gate $o$ are all outputs of a sigmoid function. Why don't we use the ReLU activation function instead of sigmoid to compute these values? Explain."
+    "# INLINE QUESTION\n",
+    "\n",
+    "Recall that in an LSTM the input gate $i$, forget gate $f$, and output gate $o$ are all outputs of a sigmoid function. Why don't we use the ReLU activation function instead of sigmoid to compute these values? Explain.\n",
+    "\n",
+    "**Your Answer:** \n",
+    "\n"
    ]
   },
   {
@@ -319,7 +340,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "N, D, W, H = 10, 20, 30, 40\n",
@@ -336,7 +359,7 @@
     "\n",
     "# Set all model parameters to fixed values\n",
     "for k, v in model.params.items():\n",
-    "  model.params[k] = np.linspace(-1.4, 1.3, num=v.size).reshape(*v.shape)\n",
+    "    model.params[k] = np.linspace(-1.4, 1.3, num=v.size).reshape(*v.shape)\n",
     "\n",
     "features = np.linspace(-0.5, 1.7, num=N*D).reshape(N, D)\n",
     "captions = (np.arange(N * T) % V).reshape(N, T)\n",
@@ -360,7 +383,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.random.seed(231)\n",
@@ -410,7 +435,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for split in ['train', 'val']:\n",
@@ -446,6 +473,57 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.1"
+  },
+  "nbdime-conflicts": {
+   "local_diff": [
+    {
+     "diff": [
+      {
+       "diff": [
+        {
+         "key": 0,
+         "length": 1,
+         "op": "removerange"
+        }
+       ],
+       "key": "version",
+       "op": "patch"
+      }
+     ],
+     "key": "language_info",
+     "op": "patch"
+    }
+   ],
+   "remote_diff": [
+    {
+     "diff": [
+      {
+       "diff": [
+        {
+         "diff": [
+          {
+           "key": 4,
+           "op": "addrange",
+           "valuelist": "7"
+          },
+          {
+           "key": 4,
+           "length": 1,
+           "op": "removerange"
+          }
+         ],
+         "key": 0,
+         "op": "patch"
+        }
+       ],
+       "key": "version",
+       "op": "patch"
+      }
+     ],
+     "key": "language_info",
+     "op": "patch"
+    }
+   ]
   }
  },
  "nbformat": 4,
