--- a/assignment3/RNN_Captioning_solution_yorko.ipynb
+++ b/assignment3/RNN_Captioning_solution_yorko.ipynb
@@ -4,12 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. [A3, part 1](http://cs231n.github.io/assignments2018/assignment3/). Image Captioning with RNNs\n",
+    "# <center> cs231n 2019. [A3, part 1](http://cs231n.github.io/assignments2018/assignment3/). Image Captioning with RNNs\n",
     "<img src='../img/cs231n_logo.png' width=70%>\n",
     "    \n",
-    "#### <center> **Solution by @yorko**\n",
+    "#### <center> **Solution by [Yury Kashnitsky](https://www.kaggle.com/kashnitsky) (@yorko)**\n",
     "\n",
-    "# \n",
     "In this exercise you will implement a vanilla recurrent neural networks and use them it to train a model that can generate novel captions for images."
    ]
   },
